--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-AZURE_OPENAI_API_KEY="cf0bd49030ed4aa6a6509be1cd9d604b"
-AZURE_OPENAI_ENDPOINT="https://invuniandesai.openai.azure.com/"
-AZURE_OPENAI_CHAT_DEPLOYMENT_NAME="gpt4omini-rfmanrique"
+AZURE_OPENAI_API_KEY=""
+AZURE_OPENAI_ENDPOINT="https://-2.openai.azure.com/"
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME="gpt-4o-mini"
 AZURE_OPENAI_API_VERSION="1.52.2"
